--- a/.github/workflows/scheduled-run.yml
+++ b/.github/workflows/scheduled-run.yml
@@ -34,4 +34,4 @@ jobs:
         uses: actions/checkout@v2
       - name: execute py script
         run:
-          python test.py
+          python ./test.py
