--- a/.github/workflows/scheduled-run.yml
+++ b/.github/workflows/scheduled-run.yml
@@ -12,7 +12,7 @@ jobs:
     - uses: pCYSl5EDgo/cat@master
       id: hello
       with:
-        path: ${{ env.home }}text.txt
+        path: ${{ env.home }}
 
     - run: echo $TEXT
       env:
